[package]
name = "kobolt"
version = "0.1.11"
edition = "2021"
description = "Stripped down game engine without directct graphics support."
authors = ["Wi"]
license = "MIT"
repository = "https://github.com/Mhiw/kobolt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
